--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登入</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
       <style>
@@ -37,18 +37,18 @@
             請先登入
           </h1>
           <div class="col-8">
-            <form id="form" class="form-signin">
+            <form id="form" class="form-signin"  @submit.prevent="login"> <!-- 事件修飾符 ，阻止表單送出 -->
               <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="username"
-                  placeholder="name@example.com" required autofocus>
+                  placeholder="name@example.com" required autofocus  v-model="user.username">
                 <label for="username">Email address</label>
               </div>
               <div class="form-floating">
                 <input type="password" class="form-control" id="password"
-                  placeholder="Password" required>
+                  placeholder="Password" required  v-model="user.password">
                 <label for="password">Password</label>
               </div>
-              <button class="btn btn-lg btn-primary w-100 mt-3" type="submit">
+              <button class="btn btn-lg btn-primary w-100 mt-3" type="submit"> 
                 登入
               </button>
             </form>
@@ -59,7 +59,7 @@
         </p>
       </div>
     </div>
- 
+
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
       integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
       crossorigin='anonymous'></script>
@@ -69,7 +69,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"></script>
-      <script src="/login.js"></script>
+      <script type="module" src="/login.js"></script>
+     
   </body>
 
 </html>
