--- a/products.html
+++ b/products.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>product</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <style>
 img {
   object-fit: contain;
@@ -45,54 +47,63 @@ img {
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td width="150">{{  }}</td>
+              <tr v-for="product in products" :key="product.id">
+                <td width="150">{{ product.title }}</td>
                 <td width="120">
-                  {{  }}
+                  {{ product.origin_price }}
                 </td>
                 <td width="120">
-                  {{  }}
+                  {{ product.price }}
                 </td>
                 <td width="150">
-                  <span class="text-success">啟用</span>
-                  <span>未啟用</span>
+                  <span v-if="product.is_enabled" class="text-success">啟用</span>
+                  <span v-else>未啟用</span>
                 </td>
                 <td width="120">
-                  <button type="button" class="btn btn-primary">查看細節</button>
+                  <button type="button" class="btn btn-primary" v-on:click="tempProduct=product">查看細節</button>
                 </td>
               </tr>
             </tbody>
           </table>
-          <p>目前有 <span>{{  }}</span> 項產品</p>
+          <p>目前有 <span>{{ products.length }}</span> 項產品</p>
         </div>
         <div class="col-md-6">
           <h2>單一產品細節</h2>
-          <template>
+          <template v-if="tempProduct.id">
             <div class="card mb-3">
-              <img src="" class="card-img-top primary-image" alt="主圖">
+              <img :src="tempProduct.imageUrl" class="card-img-top primary-image" alt="主圖">
               <div class="card-body">
                 <h5 class="card-title">
-                  {{  }}
-                  <span class="badge bg-primary ms-2">{{  }}</span>
+                  {{ tempProduct.title }}
+                  <span class="badge bg-primary ms-2">{{ tempProduct.category }}</span>
                 </h5>
-                <p class="card-text">商品描述：{{  }}</p>
-                <p class="card-text">商品內容：{{  }}</p>
+                <p class="card-text">商品描述：{{ tempProduct.description }}</p>
+                <p class="card-text">商品內容：{{ tempProduct.content }}</p>
                 <div class="d-flex">
-                  <p class="card-text me-2">{{  }}</p>
-                  <p class="card-text text-secondary"><del>{{  }}</del></p>
-                  元 / {{  }}
+                  <p class="card-text me-2">{{ tempProduct.price }}</p>
+                  <p class="card-text text-secondary"><del>{{ tempProduct.origin_price }}</del></p>
+                  {{ tempProduct.unit }} / 元
                 </div>
               </div>
             </div>
-            <template>
-              <img src="" alt="" class="images m-2">
+            <template v-for="(image, idx) in tempProduct.imagesUrl" :key="idx"> 
+              <img :src="image" alt="" class="images m-2">
             </template>
           </template>
-          <p class="text-secondary">請選擇一個商品查看</p>
+          <p v-else class="text-secondary">請選擇一個商品查看</p>
         </div>
       </div>
     </div>
   </div>
-  <script src="/product.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
+      integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
+      crossorigin='anonymous'></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+      integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+      integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+      crossorigin="anonymous"></script>
+  <script type="module" src="/product.js"></script>
 </body>
 </html>
